--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "core-js": "^2.6.5",
     "firebase": "^5.11.1",
     "material-design-icons-iconfont": "^4.0.5",
+    "node-sass": "^4.13.0",
     "register-service-worker": "^1.6.2",
+    "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
+    "vue-media-recorder": "^0.1.25",
     "vue-router": "^3.0.3",
     "vuetify": "^1.5.5"
   },
